# Agent-Court

./: .gitignore  LICENSE  README.en.md  README.md  WORKFLOW.md
mcp/court-mcp/: agent_report.py  agent_spawn.py  agent_summary.py  agent_teams.py  cc_messages.py  court_dashboard_server.py  court_reconcile_cli.py  dashboard_aggregator.py  dual_channel_approval.py  freeform_bootstrap.txt  git_board.py  gitea_client.py  gitea_watcher.py  gitea_webhook_receiver.py  github_client.py  grant_cli.py  grants.py  im_reply_router.py  issue_report_writer.py  issue_resolver.py  judge.py  keygen.py  log.py  orchestrator.py  peer_daemon.py  peer_lib.py  policy.py  pyproject.toml  retry_queue.py  server.py  team_links.py  tmux_pane.py  tracker_factory.py  webhook_secret.py  workflow_loader.py  workspace_manager.py  yiguan_daemon.py
mcp/court-mcp/auto_review/: __init__.py  bot_account.py  config.py  dispatcher.py  executor.py  ngrok.py  poster.py  serve.py  state.py  status_api.py  webhook.py  worker.py
mcp/court-mcp/tests/: test_agent_report.py  test_agent_spawn.py  test_agent_summary.py  test_agent_teams.py  test_auto_review_bot_account.py  test_auto_review_config.py  test_auto_review_dispatcher.py  test_auto_review_executor.py  test_auto_review_ngrok.py  test_auto_review_poster.py  test_auto_review_serve.py  test_auto_review_state.py  test_auto_review_status_api.py  test_auto_review_webhook.py  test_auto_review_worker.py  test_cc_messages.py  test_court_dashboard_freeform.py  test_court_dashboard_messages.py  test_court_dashboard_pane_stream.py  test_court_dashboard_report.py  test_court_dashboard_server_orchestrator.py  test_court_reconcile_cli.py  test_git_board.py  test_gitea_client_get_pr.py  test_gitea_watcher.py  test_gitea_webhook_receiver.py  test_github_client.py  test_grants.py  test_im_reply_router.py  test_log.py  (+12 more)
(+79 files in other folders)
