[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-court-mcp"
version = "0.1.0"
description = "MCP server exposing an agent-court bus to upstream LLM clients (Claude Code, Cursor, Zed, custom assistants)."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
homepage = "https://github.com/YOUR_GH_USER/agent-court"

[tool.setuptools]
py-modules = ["server", "peer_lib", "peer_daemon", "keygen"]
